; ModuleID = '/home/carl/AnghaBench/qmk_firmware/quantum/process_keycode/extr_process_combo.c_matrix_scan_combo.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/quantum/process_keycode/extr_process_combo.c_matrix_scan_combo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@b_combo_enable = common dso_local global i64 0, align 8
@is_active = common dso_local global i32 0, align 4
@timer = common dso_local global i64 0, align 8
@COMBO_TERM = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @matrix_scan_combo() #0 {
  %1 = load i64, i64* @b_combo_enable, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %16

3:                                                ; preds = %0
  %4 = load i32, i32* @is_active, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %6, label %16

6:                                                ; preds = %3
  %7 = load i64, i64* @timer, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %16

9:                                                ; preds = %6
  %10 = load i64, i64* @timer, align 8
  %11 = call i64 @timer_elapsed(i64 %10)
  %12 = load i64, i64* @COMBO_TERM, align 8
  %13 = icmp sgt i64 %11, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %9
  store i32 0, i32* @is_active, align 4
  %15 = call i32 @dump_key_buffer(i32 1)
  br label %16

16:                                               ; preds = %14, %9, %6, %3, %0
  ret void
}

declare dso_local i64 @timer_elapsed(i64) #1

declare dso_local i32 @dump_key_buffer(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
